@@ -1,5 +1,7 @@
 0.12.41 March xx, 2024
-- clean up txt boilerplate. fixes #220
+- clean up txt boilerplate. fixes easy parts of #220
+- refactor `enclose_text()` to properly deal with html4 transitional files
+
 
 0.12.40 February 9, 2024
 - fixed an issue parsing large text files. "The Entire Project Gutenberg Works of Mark Twain" was 1.2M.
